# institool

./: .gitignore
institute-management-backend/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
institute-management-backend/app/: __init__.py  main.py
institute-management-backend/app/api/: api.py
institute-management-backend/app/api/endpoints/: auth.py  users.py
institute-management-backend/app/core/: config.py  deps.py  security.py
institute-management-backend/app/db/: base.py  session.py
institute-management-backend/app/models/: __init__.py  academic_year.py  attendance.py  class_model.py  course.py  department.py  enrollment.py  fee.py  grade.py  institute.py  notification.py  schedule.py  student.py  teacher.py  user.py
institute-management-backend/app/schemas/: user.py
institute-management-backend/app/services/: auth_service.py
institute-management-frontend/: .gitignore  package-lock.json  package.json  tailwind.config.js
institute-management-frontend/src/: App.tsx  index.css
institute-management-frontend/src/components/: Layout.tsx  ProtectedRoute.tsx
institute-management-frontend/src/features/auth/: authSlice.ts
institute-management-frontend/src/features/menu/: menuSlice.ts
institute-management-frontend/src/features/ui/: darkModeSlice.ts  uiSlice.ts
institute-management-frontend/src/pages/: Dashboard.tsx  Login.tsx  TestDashboard.tsx
institute-management-frontend/src/pages/admin/: MenuConfiguration.tsx
institute-management-frontend/src/store/: hooks.ts  store.ts
institute-management-frontend/src/types/: menu.ts
(+5 files in other folders)
